--- a/primeira-pagina.html
+++ b/primeira-pagina.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
+        <meta charset="utf-8">
+        <title> Minha primeira página </title>
         <body>
             olá mundo
 
