--- a/lista.html
+++ b/lista.html
@@ -14,14 +14,54 @@
             <li> microondas </li>
             <li> geladeira</li>
         </ul>
+
+        <h2>Lista dentro de Lista </h2>
+        <ul> 
+            <li> CELULAR </li>
+                <ol>
+                    <li>sansung</li>
+                    <li>Apple</li>
+                    </ol>
+
+            <li><b> GELADEIRA </b></li>
+                <ol>
+                    <li>Eletrolux
+                    <li>LG</li>
+                    </li>
+                </ol>
+        </ul>
+
         <h2>Lista Ordenadas</h2>
-        <ol> 
+        <ol type="A"> 
             <li> ventilador </li>
             <li> televisão </li>
             <li> forno </li>
             <li> microondas </li>
             <li> geladeira</li>
         </ol>
+
+        <h2>Lista Ordenadas</h2>
+        <ol type="I"> 
+            <li> ventilador </li>
+            <li> televisão </li>
+            <li> forno </li>
+            <li> microondas </li>
+            <li> geladeira</li>
+        </ol>
+
+        <h2>Lista de Descrição</h2>
+        <dl> 
+            <dt> ventilador </dt>
+            <dd>descrição do ventilador</dd>
+            <dt>televisão </dt>
+            <dd>descrição da televisão</dd>
+            <dt>forno </dt>
+            <dd>descrição do forno</dd>
+            <dt>microondas </dt>
+            <dd>descrição do microondas</dd>
+            <dt>geladeira</dt>
+            <dd>descrição da geladeira</dd>
+        </dl>
 
 </body>
 </html>
