--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="pt-br">
     <head>
         <meta charset="utf-8">
-        <title> HELLO WORL</title>
+        <title> HELLO WORLD</title>
         <body>
-          HELLO WORL
-       
+          HELLO WORLD
         </body>
     </head>
 </html>
